Fix TextInput not reacting to text color change.

Trigger a relayout with the new color when the color property is
changed.

Task-number: QTBUG-22402

Change-Id: I2dc190e097e878ac498fd04c2800a6e11947527c
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>